add search and the cards

--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,13 @@
       {
         "list": "off"
       }
+    ],
+    "typescript-config/is-valid": "off",
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
     ]
   }
 }
